syntax = "proto3";

package user;
option go_package = "services/user_service/pb;pb";

// UserService предоставляет методы регистрации/логина и валидации токена.
service UserService {
  // Register регистрирует нового пользователя.
  rpc Register (RegisterRequest) returns (RegisterResponse);

  // Login проверяет email/password и возвращает JWT (или error).
  rpc Login (LoginRequest) returns (LoginResponse);

  // Validate проверяет JWT, возвращает user_id и email при валидном токене.
  // Токен можно также передать в metadata "authorization".
  rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  uint64 user_id = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  uint64 user_id = 2;
}

message ValidateRequest {
  // Опционально: можно передать токен прямо здесь, либо клиент передаёт
  // его в gRPC metadata "authorization: Bearer <token>".
  string token = 1;
}

message ValidateResponse {
  bool valid = 1;
  uint64 user_id = 2;
  string email = 3;
}
